// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`function components > 01 - simple arrow function 1`] = `
<div
  data-qa="component-a"
>
  xxx
</div>
`;

exports[`function components > 02 - simple return 1`] = `
<div
  data-qa="component-a"
>
  xxx
</div>
`;

exports[`function components > 03 - simple component with some properties 1`] = `
<div
  class="bello"
  data-qa="component-a"
  id="bello"
>
  xxx
</div>
`;

exports[`function components > 04 - with a const element in function scope 1`] = `
<div
  data-qa="component-a"
>
  <div
    data-qa="b"
  >
    xxx
  </div>
</div>
`;

exports[`function components > 05 - with a useCallback element in function scope 1`] = `
<div
  data-qa="component-a"
>
  <div>
    xxx
  </div>
</div>
`;

exports[`function components > 06 - with a useMemo in function scope 1`] = `
<div
  data-qa="component-a"
>
  <div>
    xxx
  </div>
</div>
`;

exports[`function components > 07 - with a function component child element 1`] = `
<div
  data-qa="component-a"
>
  <div
    data-qa="b"
  >
    xxx
  </div>
</div>
`;

exports[`function components > 08 - with list of elements in useMemo 1`] = `
<div
  data-qa="component-a"
>
  <div>
    xxx
  </div>
  <div>
    yyy
  </div>
</div>
`;

exports[`function components > 09 - fragment with list of elements 1`] = `
HTMLCollection [
  <div>
    xxx
  </div>,
  <div>
    yyy
  </div>,
]
`;

exports[`function components > 10 - fragment with list of elements in a const 1`] = `
HTMLCollection [
  <div>
    xxx
  </div>,
  <div>
    yyy
  </div>,
]
`;

exports[`function components > 11 - fragment with list of elements in useMemo 1`] = `
HTMLCollection [
  <div>
    xxx
  </div>,
  <div>
    yyy
  </div>,
]
`;

exports[`function components > 12 - with a function component outside of function scope 1`] = `
<div
  data-qa="component-b"
>
  xxx
</div>
`;

exports[`function components > 13 - with a function component with spreaded props 1`] = `
<div
  data-qa="component-a"
>
  xxx
</div>
`;
